--- a/client/index.template
+++ b/client/index.template
@@ -49,6 +49,12 @@
                   </ul>
                 </li>
                 <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">UI<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/select2">Select 2</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Test<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="/test">Test</a></li>
