--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-requirejs": "~0.4.0",
     "grunt-contrib-connect": "~0.2.0",
     "grunt-reload": "git://github.com/webxl/grunt-reload.git",
-    "send": "~0.1.0"
+    "send": "~0.1.0",
+    "grunt-contrib-concat": "~0.1.3"
   }
 }
